--- a/Example/SnappingStepperExample/Base.lproj/Main.storyboard
+++ b/Example/SnappingStepperExample/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p4I-GE-yJd" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
                                         <rect key="frame" x="65" y="156" width="120" height="40"/>
                                         <color key="backgroundColor" red="0.20392156859999999" green="0.59999999999999998" blue="0.61176470589999998" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="classic">
+                                            <bool key="isElement" value="YES"/>
+                                        </accessibility>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="120" id="Qgk-We-eVe"/>
                                             <constraint firstAttribute="height" constant="40" id="vys-bF-8tL"/>
@@ -58,6 +61,9 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yv1-gG-72y" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
                                         <rect key="frame" x="65" y="108" width="120" height="40"/>
                                         <color key="backgroundColor" red="0.20392156859999999" green="0.59999999999999998" blue="0.61176470589999998" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="tube">
+                                            <bool key="isElement" value="YES"/>
+                                        </accessibility>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="120" id="VHN-xI-jqu"/>
                                             <constraint firstAttribute="height" constant="40" id="dFm-bb-A27"/>
@@ -74,6 +80,9 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PCK-qc-iIc" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
                                         <rect key="frame" x="65" y="60" width="120" height="40"/>
                                         <color key="backgroundColor" red="0.20392156859999999" green="0.59999999999999998" blue="0.61176470589999998" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="rounded">
+                                            <bool key="isElement" value="YES"/>
+                                        </accessibility>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="120" id="8Df-Qg-Ajn"/>
                                             <constraint firstAttribute="height" constant="40" id="lDF-7o-LxK"/>
@@ -105,6 +114,9 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vQ2-aN-ZzV" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
                                         <rect key="frame" x="65" y="12" width="120" height="40"/>
                                         <color key="backgroundColor" red="0.20392156859999999" green="0.59999999999999998" blue="0.61176470589999998" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="custom">
+                                            <bool key="isElement" value="YES"/>
+                                        </accessibility>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="120" id="UAx-iJ-Fey"/>
                                             <constraint firstAttribute="height" constant="40" id="iX3-pt-Zhj"/>
