--- a/Example/SnappingStepperExample/Base.lproj/Main.storyboard
+++ b/Example/SnappingStepperExample/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
@@ -118,11 +117,28 @@
                                             <action selector="stepperValueChangedAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="QAl-kp-giM"/>
                                         </connections>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aSQ-lY-OYI" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
+                                        <rect key="frame" x="193" y="12" width="49" height="136"/>
+                                        <color key="backgroundColor" red="0.20392156859999999" green="0.59999999999999998" blue="0.61176470589999998" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="49" id="Ey0-ER-exA"/>
+                                            <constraint firstAttribute="height" constant="136" id="paB-bp-RwN"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="symbolFontColor">
+                                                <color key="value" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="stepperValueChangedAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="fVu-Il-q3v"/>
+                                        </connections>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="ziz-Bb-wQ4" firstAttribute="top" secondItem="QWu-3t-c5V" secondAttribute="bottom" constant="8" id="3LE-9o-hSi"/>
                                     <constraint firstItem="PCK-qc-iIc" firstAttribute="leading" secondItem="Yv1-gG-72y" secondAttribute="leading" id="3Vh-aQ-Iih"/>
+                                    <constraint firstItem="aSQ-lY-OYI" firstAttribute="top" secondItem="vQ2-aN-ZzV" secondAttribute="top" id="45b-BS-Ygs"/>
                                     <constraint firstAttribute="centerX" secondItem="p4I-GE-yJd" secondAttribute="centerX" id="6BB-Vm-jjs"/>
                                     <constraint firstItem="ziz-Bb-wQ4" firstAttribute="centerX" secondItem="p4I-GE-yJd" secondAttribute="centerX" id="8Gj-az-6Ie"/>
                                     <constraint firstItem="p4I-GE-yJd" firstAttribute="top" secondItem="Ix2-NP-H0n" secondAttribute="top" constant="156" id="8O0-F9-1cp"/>
@@ -134,6 +150,7 @@
                                     <constraint firstAttribute="width" constant="250" id="Vk5-e3-rCF"/>
                                     <constraint firstItem="PCK-qc-iIc" firstAttribute="top" secondItem="vQ2-aN-ZzV" secondAttribute="bottom" constant="8" symbolic="YES" id="fgN-jL-3Pr"/>
                                     <constraint firstAttribute="centerX" secondItem="QWu-3t-c5V" secondAttribute="centerX" id="fuF-Hb-mu4"/>
+                                    <constraint firstItem="aSQ-lY-OYI" firstAttribute="leading" secondItem="vQ2-aN-ZzV" secondAttribute="trailing" constant="8" symbolic="YES" id="iKj-YE-Vpa"/>
                                     <constraint firstItem="p4I-GE-yJd" firstAttribute="top" secondItem="Yv1-gG-72y" secondAttribute="bottom" constant="8" symbolic="YES" id="laf-Fb-y6M"/>
                                 </constraints>
                             </view>
@@ -153,6 +170,7 @@
                         <outlet property="roundedStepper" destination="PCK-qc-iIc" id="ncp-uI-Unr"/>
                         <outlet property="tubeStepper" destination="Yv1-gG-72y" id="ObT-4Z-2io"/>
                         <outlet property="valueLabel" destination="QWu-3t-c5V" id="adl-kG-xnR"/>
+                        <outlet property="verticalRoundedStepper" destination="aSQ-lY-OYI" id="T3z-Tu-4YC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
