--- a/Example/SnappingStepperExample/Base.lproj/Main.storyboard
+++ b/Example/SnappingStepperExample/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,6 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbl-la-odc">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="vQ2-5k-C4k"/>
                                 </constraints>
@@ -26,8 +31,10 @@
                                 </items>
                             </navigationBar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ix2-NP-H0n">
+                                <rect key="frame" x="62.5" y="205.5" width="250" height="336"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QWu-3t-c5V">
+                                        <rect key="frame" x="65" y="248" width="120" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="ad0-m7-UQg"/>
                                             <constraint firstAttribute="width" constant="120" id="nWk-ft-6Nw"/>
@@ -37,6 +44,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ziz-Bb-wQ4">
+                                        <rect key="frame" x="20.5" y="296" width="209" height="29"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="28" id="6yV-rm-FDw"/>
                                             <constraint firstAttribute="width" constant="209" id="wcW-bI-hBy"/>
@@ -51,9 +59,10 @@
                                         </connections>
                                     </segmentedControl>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sP4-mS-aEz">
+                                        <rect key="frame" x="16.5" y="16" width="217" height="224"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p4I-GE-yJd" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
-                                                <color key="backgroundColor" red="0.0" green="0.54268962144851685" blue="0.54826736450195312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <rect key="frame" x="8" y="164" width="201" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="vys-bF-8tL"/>
                                                 </constraints>
@@ -67,7 +76,7 @@
                                                 </connections>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PCK-qc-iIc" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
-                                                <color key="backgroundColor" red="0.0" green="0.54268962144851685" blue="0.54826736450195312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <rect key="frame" x="8" y="68" width="153" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="lDF-7o-LxK"/>
                                                 </constraints>
@@ -81,7 +90,7 @@
                                                 </connections>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vQ2-aN-ZzV" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
-                                                <color key="backgroundColor" red="0.0" green="0.54268962144851685" blue="0.54826736450195312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <rect key="frame" x="8" y="20" width="201" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="iX3-pt-Zhj"/>
                                                 </constraints>
@@ -95,7 +104,7 @@
                                                 </connections>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aSQ-lY-OYI" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
-                                                <color key="backgroundColor" red="0.0" green="0.54268962144851685" blue="0.54826736450195312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <rect key="frame" x="169" y="68" width="40" height="88"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="Ey0-ER-exA"/>
                                                 </constraints>
@@ -109,7 +118,7 @@
                                                 </connections>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yv1-gG-72y" customClass="SnappingStepper" customModule="SnappingStepperExample" customModuleProvider="target">
-                                                <color key="backgroundColor" red="0.0" green="0.54268962144851685" blue="0.54826736450195312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <rect key="frame" x="8" y="116" width="153" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="dFm-bb-A27"/>
                                                 </constraints>
